# shoecart-backend

./: .gitignore  README.md  build.sh  package-lock.json  pyproject.toml  requirements.txt  seed_data.json
apps/cart/: apps.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_delete_cartitem.py
apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_orderitem.py  0003_order_status.py
apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
apps/products/migrations/: 0001_initial.py  0002_remove_product_created_at_remove_product_description_and_more.py  0003_product_is_active.py  0004_category_product_description_product_category.py
apps/users/: apps.py  models.py  serializers.py  urls.py  views.py
apps/users/management/commands/: seed_admin.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_username.py
config/: settings.py  urls.py
config/management/commands/: createsu.py
