[tool.poetry]
name = "ecommerce-backend"
version = "0.1.0"
description = "Django backend for Shoecart"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "5.2.*"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
dj-database-url = "^2.3.0"
whitenoise = {extras = ["brotli"], version = "^6.8.2"}
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"